--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "cmdk": "^1.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.514.0",
+    "motion": "^12.18.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
