--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.514.0",
     "motion": "^12.18.1",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0-rc.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0-rc.1",
