--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 
-MONGODB_URI=mongodb+srv://VincentObenza05:VincentObenza2003@vincedev.dpoa2ii.mongodb.net/bhouse-rental?retryWrites=true&w=majority&appName=VinceDev
+MONGODB_URI=mongodb+srv://VincentObenza:Vincent_0504@vincedev.dpoa2ii.mongodb.net/rental-bhouse?retryWrites=true&w=majority&appName=VinceDev
