--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 
 MONGODB_URI=mongodb://VincentObenza:Vincent_0504@ac-zyoimnj-shard-00-00.dpoa2ii.mongodb.net:27017,ac-zyoimnj-shard-00-01.dpoa2ii.mongodb.net:27017,ac-zyoimnj-shard-00-02.dpoa2ii.mongodb.net:27017/rental-bhouse?ssl=true&replicaSet=atlas-y2h195-shard-0&authSource=admin&retryWrites=true&w=majority&appName=VinceDev
+CLIENT_URL=http://localhost:5173
